err/pyblish-nuke.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyblish'...
Listing './lib/python3.5/site-packages/pyblish/icons'...
Listing './lib/python3.5/site-packages/pyblish/plugins'...
Listing './lib/python3.5/site-packages/pyblish/vendor'...
Listing './lib/python3.5/site-packages/pyblish/vendor/click'...
Listing './lib/python3.5/site-packages/pyblish_base-1.6.0.egg-info'...
Listing './lib/python3.5/site-packages/pyblish_nuke'...
Compiling './lib/python3.5/site-packages/pyblish_nuke/lib.py'...
***   File "./lib/python3.5/site-packages/pyblish_nuke/lib.py", line 270
    print "Deleting existing dock..."
                                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pyblish_nuke/nuke_path'...
Listing './lib/python3.5/site-packages/pyblish_nuke/plugins'...
Listing './lib/python3.5/site-packages/pyblish_nuke/vendor'...
Listing './lib/python3.5/site-packages/pyblish_nuke-2.0.3.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './lib/python3.5/site-packages/tests/pre11'...
Listing './lib/python3.5/site-packages/tests/pre13'...
Listing './share'...
Listing './share/python-wheels'...
